# MicroRTSpy

./: .gitmodules  ALL_BUILD.vcxproj  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  MicroRTS_CPP.sln  MicroRTScpp.vcxproj  MicroRTScpp.vcxproj.filters  MicroRTSpy.pyi  MicroRTSpy.vcxproj  MicroRTSpy.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  exp2.vcxproj  exp2.vcxproj.filters  main2.cpp  pyproject.toml  setup.py
MicroRTScpp.dir/Debug/MicroRTScpp.tlog/: CL.command.1.tlog  CustomBuild.read.1.tlog
MicroRTScpp.dir/Release/MicroRTScpp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
MicroRTSpy.dir/Release/: MicroRTSpy.cp311-win_amd64.iobj  MicroRTSpy.cp311-win_amd64.pyd.recipe
MicroRTSpy.dir/Release/MicroRTSpy.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  MicroRTSpy.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog
MicroRTSpy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Release/: MicroRTScpp.lib  MicroRTSpy.cp311-win_amd64.pyd  MicroRTSpy.exp  MicroRTSpy.lib
exp2.dir/Debug/exp2.tlog/: CL.command.1.tlog  CL.write.1.tlog  CustomBuild.write.1.tlog
exp2.dir/Release/: exp2.exe.recipe
exp2.dir/Release/exp2.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
include/: AStarPathFinding.h  GameState.h  PathFinding.h  PhysicalGameState.h  Player.h  PlayerAction.h  ResourceUsage.h  Unit.h  UnitAction.h  UnitActionAssignment.h  UnitType.h  UnitTypeTable.h
src/brind_pybind11/: PhysicalGameState_py.cpp  Player_py.cpp  UnitTypeTable_py.cpp  UnitType_py.cpp  Unit_py.cpp
src/cpp/: AStarPathFinding.cpp  GameState.cpp  PhysicalGameState.cpp  Player.cpp  PlayerAction.cpp  ResourceUsage.cpp  Unit.cpp  UnitAction.cpp  UnitActionAssignment.cpp  UnitType.cpp  UnitTypeTable.cpp
src/python/: main.py  python.py  python.pyproj
src/python/ai/abstraction/: AbstractAction.py  AbstractionLayerAI.py  Attack.py  Build.py  Harvest.py  Idle.py  Move.py  Train.py
src/python/maps/: mapadavid2.xml
src/python/tests/: test.py  test1.py  test2.py  test3.py
src/python/util/: screen.py
tests/: xmlTest0.cpp
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
x64/Release/ALL_BUILD/: ALL_BUILD.recipe
x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
